[package]
name = "rustographics"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasm_lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

# dependencies for all targets
[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
heron = { version = "0.11.1", features = ["2d"] }

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", features = ["jpeg"] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "png", "render"]}
bevy_webgl2 = "0.5"